--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.0",
+    "axios": "^1.2.1",
     "ethers": "^5.6.0",
     "ipfs-http-client": "^56.0.1",
     "react": "^17.0.2",
